Add getOwnUser endpoint
