# server/restapi/operations/user/get_own_user.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package user
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+
+	"estore-backend/server/models"
+)
+
+// GetOwnUserHandlerFunc turns a function with the right signature into a get own user handler
+type GetOwnUserHandlerFunc func(GetOwnUserParams, *models.Principal) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetOwnUserHandlerFunc) Handle(params GetOwnUserParams, principal *models.Principal) middleware.Responder {
+	return fn(params, principal)
+}
+
+// GetOwnUserHandler interface for that can handle valid get own user params
+type GetOwnUserHandler interface {
+	Handle(GetOwnUserParams, *models.Principal) middleware.Responder
+}
+
+// NewGetOwnUser creates a new http.Handler for the get own user operation
+func NewGetOwnUser(ctx *middleware.Context, handler GetOwnUserHandler) *GetOwnUser {
+	return &GetOwnUser{Context: ctx, Handler: handler}
+}
+
+/*
+	GetOwnUser swagger:route GET /user user getOwnUser
+
+Get own user information
+*/
+type GetOwnUser struct {
+	Context *middleware.Context
+	Handler GetOwnUserHandler
+}
+
+func (o *GetOwnUser) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetOwnUserParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		*r = *aCtx
+	}
+	var principal *models.Principal
+	if uprinc != nil {
+		principal = uprinc.(*models.Principal) // this is really a models.Principal, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
